global.css
:root {
  --white: #fff;
  --black: #000;

  --accent: #fff;
  --accent-hover: #fff;

  --body-bg: var(--black);
  --body-bg-inverse: var(--white);
  --body-color: var(--white);
  --body-color-inverse: var(--black);
  --heading-color: var(--white);
  --heading-color-inverse: var(--black);
  --link-color: var(--accent);
  --link-color-hover: var(--accent-hover);

  --border-color: var(--body-bg);

  --font-family-system-ui: -apple-system, BlinkMacSystemFont, "Segoe UI",
    "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
    "Helvetica Neue", Arial, sans-serif;
  --font-family-sans-serif: "Open Sans", --font-family-system-ui;
  --font-family-serif: "Lora", Georgia, "Times New Roman", Times, serif;
  --font-family-heading: "Rubik", --font-family-system-ui;
  --font-family-monospace: Menlo, Monaco, Consolas, "Liberation Mono",
    "Courier New", monospace;

  --font-size-s: 12px;
  --font-size: 16px;
  --font-size-lg: 18px;
  --line-height: 1.25;
  --line-height-lg: 1.375;

  --max-width: 750px;
  --max-width-lg: 970px;
  --max-width-xl: 1170px;
  --container-padding: 1.5rem;
  --container-padding-lg: 3rem;
}

html {
  box-sizing: border-box;
}

*,
*::before,
*::after {
  box-sizing: inherit;
}

html,
body {
  margin: 0;
  padding: 0;
  height: 100%;
}

html {
  font-family: var(--font-family-system-ui);
  font-size: var(--font-size);
  line-height: 1.5;
  scroll-behavior: smooth;
}

@media (min-width: 992px) {
  html {
    font-size: var(--font-size-lg);
    line-height: var(--line-height-lg);
  }
}

body {
  color: var(--body-color);
  background-color: var(--body-bg);
}

a {
  color: var(--link-color);
}

a:hover,
a:focus {
  color: var(--link-color-hover);
}

@media (min-width: 768px) {
  a {
    text-decoration: none;
  }

  a:hover,
  a:focus {
    text-decoration: none;
  }
}

img {
  display: block;
  max-width: 100%;
  margin: 0 0 1rem;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin-bottom: 1.25rem;
  font-family: var(--font-family-heading);
  font-weight: 600;
  color: var(--heading-color);
  text-rendering: optimizeLegibility;
}

h1 {
  font-size: 2rem;
  line-height: 1.125;
}

@media (min-width: 992px) {
  h1 {
    font-size: 3rem;
    line-height: 1.05;
  }

  h2 {
    font-size: 2.25rem;
  }

  h3 {
    font-size: 1.75rem;
  }
}

h2 {
  font-size: 1.5rem;
  line-height: 1.25;
}

@media (min-width: 768px) {
  h2 {
    font-size: 2rem;
    line-height: 1.25;
  }

  h4,
  h5,
  h6 {
    line-height: 1.22222222;
  }
}

h3 {
  font-size: 1.25rem;
  line-height: 1.25;
}

h4,
h5,
h6 {
  font-size: 1.125rem;
  line-height: 1.11111111;
}

p {
  margin: 0 0 1rem;
}

strong {
  color: var(--heading-color);
}

ul,
ol,
dl {
  margin-top: 0;
  margin-bottom: 1rem;
}

.container {
  max-width: var(--max-width);
  margin: 0 auto;
  padding: 0 1rem;
}

@media (min-width: 992px) {
  .container {
    max-width: var(--max-width-lg);
  }
}

.section {
  display: flex;
  min-height: 100dvh;
  width: 100%;
  align-items: center;
  justify-content: center;
  position: relative;
  z-index: 1;
  padding: 0 0 1.5rem;
}

.inner-section {
  width: 100%;
}

.inner-section h1,
.inner-section h2,
.inner-section h3 {
  margin-top: 0;
}

.inner-section a {
  text-shadow: 0px 0px 10px rgba(255, 255, 255, 0.7);
}

.inner-section a:hover {
  text-shadow: 0px 0px 10px rgba(255, 255, 255, 1);
}

figure {
  margin: 2rem 0;
}

figcaption {
  font-size: 80%;
}

table {
  margin-bottom: 1rem;
  width: 100%;
  font-size: 85%;
  border: 1px solid #e5e5e5;
  border-collapse: collapse;
}

td,
th {
  padding: 0.25rem 0.5rem;
  border: 1px solid #e5e5e5;
}

th {
  text-align: left;
}

tbody tr:nth-child(odd) td,
tbody tr:nth-child(odd) th {
  background-color: #f9f9f9;
}

.text-shadow {
  text-shadow: 0px 0px 5px rgba(255, 255, 255, 0.7);
}

.img-shadow {
  filter: drop-shadow( 0px 0px 2px rgba(255, 255, 255, 0.7));
}

.scp-logo {
  width: 100%;
  max-width: 256px;
  height: auto;
}

@media (max-width: 768px) {
  .scp-logo {
    max-width: 192px;
    height: auto;
  }
}

